--- a/configs/.config/polybar/config.ini
+++ b/configs/.config/polybar/config.ini
@@ -10,13 +10,13 @@ fixed-center = true
 background = ${colors.surface0}
 foreground = ${colors.text}
 line-size = 3pt
-border-size = 4pt
+border-size = 3pt
 border-color = ${colors.transparent}
 padding-left = 1
 padding-right = 2
 module-margin = 1
 separator = ""
-separator-foreground = ${colors.crust}
+separator-foreground = ${colors.surface1}
 font-0 = Hack Nerd Font:size=15;4
 font-1 = Hack Nerd Font:size=12;4
 font-2 = Hack Nerd Font:size=15;3
