fix maim screenshot blur

--- a/configs/.config/picom/picom.conf
+++ b/configs/.config/picom/picom.conf
@@ -44,6 +44,18 @@ shadow-exclude = [
 #################################
 fading = true;
 fade-delta = 5;
+fade-exclude = [
+  "class_g = 'slop'"
+];
+##################################
+#    Transparency / Opacity      #
+##################################
+focus-exclude = [
+  "class_g = 'slop'"
+];
+opacity-rule = [
+  "100:class_g    = 'slop'",
+];
 
 #################################
 #     Background-Blurring       #
@@ -57,8 +69,9 @@ blur: {
 }
 blur-background-exclude = [
   "window_type = 'dock'",
+  "class_g = 'slop'",
   "window_type = 'desktop'",
-  "_GTK_FRAME_EXTENTS@:c"
+  "_GTK_FRAME_EXTENTS@:c",
 ];
 #################################
 #       General Settings        #
