--- a/configs/.config/picom/picom.conf
+++ b/configs/.config/picom/picom.conf
@@ -72,6 +72,7 @@ blur-background-exclude = [
   "class_g = 'slop'",
   "window_type = 'desktop'",
   "_GTK_FRAME_EXTENTS@:c",
+  "role = 'xborder'"
 ];
 #################################
 #       General Settings        #
