--- a/configs/.config/picom/picom.conf
+++ b/configs/.config/picom/picom.conf
@@ -78,7 +78,7 @@ blur-background-exclude = [
 #       General Settings        #
 #################################
 experimental-backends = true;
-backend = "glx";
+backend = "xrender";
 vsync = true;
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
