--- a/configs/.config/i3/config
+++ b/configs/.config/i3/config
@@ -249,6 +249,12 @@ bindsym XF86AudioLowerVolume exec --no-startup-id ~/.config/scripts/volume.sh do
 bindsym XF86AudioMute exec --no-startup-id ~/.config/scripts/volume.sh mute
 # bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
+# Media player controls
+bindsym XF86AudioPlay exec playerctl play-pause
+bindsym XF86AudioStop exec playerctl stop
+bindsym XF86AudioNext exec playerctl next
+bindsym XF86AudioPrev exec playerctl previous
+
 # ------------------- Correct handling of floating dialogs ------------------- #
 for_window [window_role="pop-up"] floating enable
 for_window [window_role="task_dialog"] floating enable
