--- a/configs/.config/tmux/tmux.conf
+++ b/configs/.config/tmux/tmux.conf
@@ -1,2 +1,30 @@
 set -g default-terminal "screen-256color"
 set -ag terminal-overrides "*:RGB"
+
+set -g base-index 1
+
+set -sg escape-time 10
+
+set -g status-bg "#181825"
+set -g status-fg "#cba6f7"
+
+setw -g mouse on
+
+unbind-key C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
+setw -g mode-keys vi
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
+bind -r ^ last-window
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
+
+bind-key v split-window -h
+bind-key h split-window -v
+
+bind-key -r i run-shell "tmux neww tmux-cht.sh"
