--- a/configs/.config/tmux/tmux.conf
+++ b/configs/.config/tmux/tmux.conf
@@ -1,12 +1,20 @@
-set -g default-terminal "screen-256color"
-set -ag terminal-overrides "*:RGB"
+set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tpm'
+
+set -g default-terminal 'screen-256color'
+set -ag terminal-overrides '*:RGB'
+
 
 set -g base-index 1
+set -g pane-base-index 1
+setw -g pane-base-index 1
+set -g renumber-windows on
 
 set -sg escape-time 10
 
-set -g status-bg "#181825"
-set -g status-fg "#cba6f7"
+set -g status-bg '#181825'
+set -g status-fg '#cba6f7'
+set -g @catppuccin_date_time "%H:%M"
 
 setw -g mouse on
 
@@ -27,4 +35,7 @@ bind -r l select-pane -R
 bind-key v split-window -h
 bind-key h split-window -v
 
-bind-key -r i run-shell "tmux neww tmux-cht.sh"
+bind-key -r i run-shell 'tmux neww tmux-cht.sh'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.config/tmux/plugins/tpm/tpm'
