--- a/configs/.config/alacritty/alacritty.yml
+++ b/configs/.config/alacritty/alacritty.yml
@@ -8,19 +8,22 @@ env:
 
 window:
     padding:
-        x: 5
-        y: 5
-    opacity: 0.8
+        x: 2
+        y: 2
+    dynamic_padding: true
+    opacity: 0.9
 
 font:
     normal:
-        family: Hack Nerd Font
+        family: FiraCode Nerd Font
         style: Regular
 
     bold:
-        family: Hack Nerd Font
+        family: FiraCode Nerd Font
+        style: Bold
 
     italic:
-        family: Hack Nerd Font
+        family: FiraCode Nerd Font
+        style: Italic
 
     size: 12
