update nerd font icons in polybar

--- a/configs/.config/polybar/config.ini
+++ b/configs/.config/polybar/config.ini
@@ -60,12 +60,12 @@ label-empty-padding = 1
 
 [module/pulseaudio]
 type = internal/pulseaudio
-format-volume-prefix = " "
+format-volume-prefix = "󰕾 "
 format-volume-prefix-foreground = ${colors.lavender}
 format-volume = %{T2}<label-volume>
 label-volume = %percentage%%
 label-volume-foreground = ${colors.lavender}
-label-muted = 婢
+label-muted = 󰖁
 label-muted-foreground = ${colors.red}
 
 
@@ -121,10 +121,10 @@ label-disconnected = 󰤮
 [module/eth]
 inherit = network-base
 interface-type = wired
-label-connected = 
+label-connected = 󰈀
 label-connected-foreground = ${colors.blue}
 ;label-connected = %{F#fafdff}%{F-} %local_ip%
-label-disconnected = 
+label-disconnected = 󰈂
 
 [module/networkmenu]
 type = custom/text
@@ -163,15 +163,15 @@ type = internal/memory
 interval = 3
 warn-percentage = 90
 format-foreground = ${colors.green}
-label =  %{T2}%percentage_used%%
+label = 󰍛 %{T2}%percentage_used%%
 format-warn = <label-warn>
 format-warn-foreground = ${colors.red}
-label-warn =  %{T2}%percentage_used%%
+label-warn = 󰍛 %{T2}%percentage_used%%
 
 [module/powermenu]
 type = custom/text
 click-left = $HOME/.config/rofi/bin/powermenu
-content = 襤
+content = 
 content-foreground = ${colors.rosewater}
 
 [settings]
