update polybar config

--- a/configs/.config/polybar/config.ini
+++ b/configs/.config/polybar/config.ini
@@ -12,24 +12,28 @@ foreground = ${colors.text}
 line-size = 3pt
 border-size = 3pt
 border-color = ${colors.transparent}
-padding-left = 1
-padding-right = 2
-module-margin = 1
-separator = ""
-separator-foreground = ${colors.surface1}
-font-0 = Hack Nerd Font:size=15;4
-font-1 = Hack Nerd Font:size=12;4
-font-2 = Hack Nerd Font:size=15;3
+padding-left = 10px
+padding-right = 28px
+module-margin = 10px
+;separator = ""
+;separator-foreground = ${colors.surface1}
+font-0 = "Hack Nerd Font:size=15;4"
+font-1 = "JetBrainsMono Nerd Font:size=12:style=bold;4"
+font-2 = "JetBrainsMono Nerd Font:size=15:style=bold;4"
 modules-left = xworkspaces 
-modules-right = xkeyboard pulseaudio xbacklight battery memory wlan eth 
+modules-right = tray xkeyboard pulseaudio xbacklight battery memory wlan eth powermenu
 modules-center = date
-tray-position = center
-tray-offset-x= 200
 cursor-click = pointer
 enable-ipc = true
 wm-name = i3
 override-redirect = true
 wm-restack = i3
+
+[module/tray]
+type = internal/tray
+tray-spacing = 14px
+tray-size = 60%
+
 
 [module/xworkspaces]
 type = internal/xworkspaces
@@ -49,12 +53,12 @@ label-empty-padding = 1
 ; ; You can get a list of the defined desktops using:
 ; ; $ xprop -root _NET_DESKTOP_NAMES
 ; icon-0 = 1;
-; icon-1 = 2;
+; icon-1 = 2;󰈹
 ; icon-2 = 3;
 ; icon-3 = 4;
-; icon-4 = 5;漣
+; icon-4 = 5;
 ; icon-5 = 6;󰙯
-; icon-default = 
+; icon-default = 󰍹
 
 [module/pulseaudio]
 type = internal/pulseaudio
@@ -79,7 +83,7 @@ format-charging-foreground = ${colors.green}
 format-discharging = <ramp-capacity> 
 label-charging = %percentage%%
 label-discharging = %percentage%%
-label-full = 
+label-full = 󰁹
 label-full-foreground = ${colors.green}
 label-low = 
 ramp-capacity-0 = 󰁺
@@ -88,11 +92,11 @@ ramp-capacity-2 = 󰁾
 ramp-capacity-3 = 󰂀
 ramp-capacity-4 = 󰁹
 bar-capacity-width = 10
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
+animation-charging-0 = 󰂆
+animation-charging-1 = 󰂈
+animation-charging-2 = 󰂉
+animation-charging-3 = 󰂊
+animation-charging-4 = 󰂅
 animation-charging-framerate = 750
 animation-discharging-0 = 󰁹
 animation-discharging-1 = 󰂀
@@ -107,8 +111,8 @@ animation-low-framerate = 200
 [network-base]
 type = internal/network
 interval = 3
-format-connected =  %{A1:python ~/.config/rofi/bin/network:} <label-connected> %{A}
-format-disconnected = %{A1:python ~/.config/rofi/bin/network:} <label-disconnected> %{A}
+format-connected = %{A1:python ~/.config/rofi/bin/network:}<label-connected>%{A}
+format-disconnected = %{A1:python ~/.config/rofi/bin/network:}<label-disconnected>%{A}
 
 [module/wlan]
 inherit = network-base
@@ -119,10 +123,10 @@ label-disconnected = 󰤮
 [module/eth]
 inherit = network-base
 interface-type = wired
-label-connected = 󰈀
+label-connected = 󰛳
 label-connected-foreground = ${colors.blue}
 ;label-connected = %{F#fafdff}%{F-} %local_ip%
-label-disconnected = 󰈂
+label-disconnected = 󰲛
 
 [module/networkmenu]
 type = custom/text
@@ -161,7 +165,7 @@ type = internal/memory
 interval = 3
 warn-percentage = 90
 format-foreground = ${colors.green}
-label = 󰍛 %{T2}%percentage_used%%
+label = 󰍛 %{T2}%gb_used%
 format-warn = <label-warn>
 format-warn-foreground = ${colors.red}
 label-warn = 󰍛 %{T2}%percentage_used%%
@@ -169,8 +173,8 @@ label-warn = 󰍛 %{T2}%percentage_used%%
 [module/powermenu]
 type = custom/text
 click-left = $HOME/.config/rofi/bin/powermenu
-content = 
-content-foreground = ${colors.rosewater}
+content = ⏼
+content-foreground = ${colors.mauve}
 
 [settings]
 screenchange-reload = true
