--- a/configs/.config/i3/config
+++ b/configs/.config/i3/config
@@ -211,6 +211,11 @@ set $crust     #11111b
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:Hack Bold 9 
+
+# This font is widely installed, provides lots of unicode glyphs, right-to-left
+# text rendering and scalability on retina/hidpi displays (thanks to pango).
+# font pango:DejaVu Sans Mono 8
+
 title_align center
 # -------------------------------- Color stuff ------------------------------- #
 # class                  title_border bg        text       indicator  child_border
@@ -220,10 +225,6 @@ client.unfocused         $mauve       $base     $subtext1  $base      $base
 client.urgent            $peach       $base     $peach     $overlay0  $peach
 client.placeholder       $overlay0    $base     $text      $overlay0  $overlay0
 client.background        $base
-
-# This font is widely installed, provides lots of unicode glyphs, right-to-left
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
-# font pango:DejaVu Sans Mono 8
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
@@ -300,8 +301,9 @@ gaps inner 5
 gaps top 40
 
 # ---------------------------------------------------------------------------- #
-# Start picom
-exec --no-startup-id picom -b
+# Start compositor
+# exec --no-startup-id picom -b
+exec --no-startup-id compfy --daemon
 # Set background
 exec --no-startup-id feh --no-fehbg --bg-fill ~/dotfiles/wallpaper/rainbow-cat.png
 # notification manager
