--- a/configs/.config/tmux/tmux.conf
+++ b/configs/.config/tmux/tmux.conf
@@ -27,10 +27,10 @@ bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 bind -r ^ last-window
-bind -r k select-pane -U
-bind -r j select-pane -D
-bind -r h select-pane -L
-bind -r l select-pane -R
+bind -r C-k select-pane -U
+bind -r C-j select-pane -D
+bind -r C-h select-pane -L
+bind -r C-l select-pane -R
 
 bind-key v split-window -h
 bind-key h split-window -v
