--- a/configs/.config/tmux/tmux.conf
+++ b/configs/.config/tmux/tmux.conf
@@ -1,9 +1,8 @@
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tpm'
 
-set -g default-terminal 'screen-256color'
-set -ag terminal-overrides '*:RGB'
-
+set -g default-terminal 'tmux-256color'
+set -ag terminal-overrides ',*:RGB'
 
 set -g base-index 1
 set -g pane-base-index 1
@@ -15,6 +14,8 @@ set -sg escape-time 10
 set -g status-bg '#181825'
 set -g status-fg '#cba6f7'
 set -g @catppuccin_date_time "%H:%M"
+
+set-option -g focus-events on
 
 setw -g mouse on
 
