update picom config

--- a/configs/.config/picom/picom.conf
+++ b/configs/.config/picom/picom.conf
@@ -11,7 +11,7 @@ rounded-corners-exclude = [
     "window_type = 'popup_menu'",
     "window_type = 'dnd'",
     "class_g ?= 'i3'",
-    "class_g ?= 'Polybar'",
+    "class_g ?= 'Polybar'"
 ];
 # round-borders = 1;
 # round-borders-exclude = [
@@ -54,7 +54,7 @@ focus-exclude = [
   "class_g = 'slop'"
 ];
 opacity-rule = [
-  "100:class_g    = 'slop'",
+  "100:class_g    = 'slop'"
 ];
 
 #################################
