--- a/configs/.config/tmux/tmux.conf
+++ b/configs/.config/tmux/tmux.conf
@@ -1,5 +1,5 @@
-set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'catppuccin/tmux#v1.0.3'
 
 set -g default-terminal 'tmux-256color'
 set -ag terminal-overrides ',*:RGB'
@@ -11,9 +11,31 @@ set -g renumber-windows on
 
 set -sg escape-time 10
 
-set -g status-bg '#181825'
-set -g status-fg '#cba6f7'
-set -g @catppuccin_date_time "%H:%M"
+#set -g status-bg '#181825'
+#set -g status-fg '#cba6f7'
+
+# Catppuccin config
+set -g @catppuccin_date_time_text "%H:%M"
+set -g @catppuccin_window_status_style "rounded"
+set -g @catppuccin_window_number_position "right"
+
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W "
+
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W "
+
+
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+
+set -g @catppuccin_directory_text "#{pane_current_path}"
+
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_directory}#{E:@catppuccin_status_date_time}#{E:@catppuccin_status_session}"
+# ---------------------
 
 set-option -g focus-events on
 
