--- a/configs/.config/i3/config
+++ b/configs/.config/i3/config
@@ -172,9 +172,9 @@ bindsym $mod+minus scratchpad show
 
 # use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id volume.sh up && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id volume.sh down && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id volume.sh mute && $refresh_i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id ~/.local/bin/volume.sh up && $refresh_i3status
+bindsym XF86AudioLowerVolume exec --no-startup-id ~/.local/bin/volume.sh down && $refresh_i3status
+bindsym XF86AudioMute exec --no-startup-id ~/.local/bin/volume.sh mute && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
 # Media player controls
