--- a/configs/.config/i3status/config
+++ b/configs/.config/i3status/config
@@ -19,7 +19,7 @@ order += "wireless _first_"
 order += "ethernet _first_"
 order += "battery all"
 order += "disk /"
-order += "load"
+#order += "load"
 order += "memory"
 order += "volume master"
 order += "tztime local"
@@ -39,7 +39,7 @@ battery all {
 }
 
 disk "/" {
-    format = "%avail"
+    format = "DISK: %avail"
 }
 
 load {
@@ -47,7 +47,7 @@ load {
 }
 
 memory {
-    format = "%used | %available"
+    format = "MEM: %used"
     threshold_degraded = "1G"
     format_degraded = "MEMORY < %available"
 }
@@ -57,8 +57,8 @@ tztime local {
 }
 
 volume master {
-    format = "♪: %volume"
-    format_muted = "♪: muted (%volume)"
+    format = "󰎇: %volume"
+    format_muted = "󰎇: muted (%volume)"
     device = "default"
     mixer = "Master"
     mixer_idx = 0
