--- a/configs/.config/i3/config
+++ b/configs/.config/i3/config
@@ -264,6 +264,8 @@ client.background        $base
 
 # add persian keyboard layout
 exec_always --no-startup-id setxkbmap -model pc104 -layout us,ir -option 'grp:alt_shift_toggle'
+# map caps lock to escape
+exec_always --no-startup-id setxkbmap -option caps:escape
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
