--- a/configs/.config/i3/config
+++ b/configs/.config/i3/config
@@ -71,6 +71,7 @@ bindsym $mod+q kill
 bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 # a more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
+bindsym $mod+period exec --no-startup-id efck-chat-keyboard
 
 # use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -263,9 +264,9 @@ client.placeholder       $overlay0 $base $text  $overlay0  $overlay0
 client.background        $base
 
 # add persian keyboard layout
-exec_always --no-startup-id setxkbmap -model pc104 -layout us,ir -option 'grp:alt_shift_toggle'
+exec_always --no-startup-id "setxkbmap -model pc104 -layout us,ir -option 'grp:alt_shift_toggle'"
 # map caps lock to escape
-exec_always --no-startup-id setxkbmap -option caps:escape
+exec_always --no-startup-id "setxkbmap -option caps:escape"
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
